{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 67,
  "lineage": "4fd614dc-2e91-c757-c346-01e142f92c36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fatih_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05319c57b66716b5f",
            "arn": "arn:aws:ec2:us-west-2:124395572296:instance/i-0ca5d37559fd44b85",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca5d37559fd44b85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "benim_anahtarim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d62d0a4c2b79359c",
            "private_dns": "ip-10-123-0-129.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.0.129",
            "public_dns": "ec2-54-201-175-20.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.175.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01eae8b7b43b45bf6",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f544cdcec1075fcf",
            "tags": {
              "name": "fatih-instance"
            },
            "tags_all": {
              "name": "fatih-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce4206115d8fd344"
            ]
          },
          "dependencies": [
            "aws_key_pair.fatih_auth",
            "aws_security_group.fatih_allow_tls",
            "aws_subnet.fatih_public_subnet",
            "data.aws_ami.fatih_ubuntu_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fatih_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:124395572296:internet-gateway/igw-0d4051f6addd07e62",
            "id": "igw-0d4051f6addd07e62",
            "owner_id": "124395572296",
            "tags": {
              "Name": "fatih_internet_gateway"
            },
            "tags_all": {
              "Name": "fatih_internet_gateway"
            },
            "vpc_id": "vpc-0958fca90d00ff0ad"
          },
          "dependencies": [
            "aws_vpc.fatih_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "fatih_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d4051f6addd07e62",
            "id": "r-rtb-0621852c0b56b8fc01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0621852c0b56b8fc0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fatih_internet_gateway",
            "aws_route_table.fatih_route_table",
            "aws_vpc.fatih_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fatih_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:124395572296:route-table/rtb-0621852c0b56b8fc0",
            "id": "rtb-0621852c0b56b8fc0",
            "owner_id": "124395572296",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4051f6addd07e62",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fatih_dev_public_rt"
            },
            "tags_all": {
              "Name": "fatih_dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0958fca90d00ff0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fatih_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fatih_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dda645a68bcbcb66",
            "route_table_id": "rtb-0621852c0b56b8fc0",
            "subnet_id": "subnet-0f544cdcec1075fcf"
          },
          "dependencies": [
            "aws_route_table.fatih_route_table",
            "aws_subnet.fatih_public_subnet",
            "aws_vpc.fatih_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fatih_allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:124395572296:security-group/sg-0ce4206115d8fd344",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce4206115d8fd344",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "124395572296",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0958fca90d00ff0ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fatih_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fatih_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:124395572296:subnet/subnet-0f544cdcec1075fcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f544cdcec1075fcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124395572296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Service": "fatih_dev_public"
            },
            "tags_all": {
              "Service": "fatih_dev_public"
            },
            "vpc_id": "vpc-0958fca90d00ff0ad"
          },
          "dependencies": [
            "aws_vpc.fatih_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fatih_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:124395572296:vpc/vpc-0958fca90d00ff0ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0c233c4a33f7384e1",
            "default_route_table_id": "rtb-0e7135ad8cd5d6c08",
            "default_security_group_id": "sg-0f0a72dd05a9e2f2e",
            "dhcp_options_id": "dopt-0df8a66c3aad81b1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0958fca90d00ff0ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7135ad8cd5d6c08",
            "owner_id": "124395572296",
            "tags": {
              "Name": "fatih_dev"
            },
            "tags_all": {
              "Name": "fatih_dev"
            }
          }
        }
      ]
    }
  ]
}